--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,8 +1,10 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
 <body {% if page.body_id %}id="{{ page.body_id }}"{% endif %}>
+  <header></header>
   <div id="content">
     {{ content }}
   </div>
+  <footer></footer>
 </body>
 </html>
