--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -6,7 +6,7 @@
 
   <meta name="author" content="{{ site.author }}">
 
-  {% capture canonical %}{{ site.url }}{% if site.permalink contains ".html" %}{{ page.url }}{% else %}{{ page.url | remove: "index.html" }}{% endif %}{% endcaputre %}
+  {% capture canonical %}{{ site.url }}{% if site.permalink contains ".html" %}{{ page.url }}{% else %}{{ page.url | remove:"index.html" }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 </head>
