Adding .wrapper to the video layout.

--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -3,7 +3,7 @@ layout: default
 single: true
 ---
 
-<div>
+<div class="wrapper">
 <article class="hentry" role="article">
   <section class=""></section>
   <header></header>
