The video template cannot use the YouTube template tag. :(

--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -7,6 +7,9 @@ single: true
 <article class="hentry" role="article">
   <section class=""></section>
   <header></header>
+
+  <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
   <div class="entry-content">{{ content }}</div>
 </article>
 </div>
