--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -6,7 +6,10 @@ single: true
 <div class="wrapper">
 <article class="hentry" role="article">
   <section class=""></section>
-  <header></header>
+  <header>
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.date }}</p>
+  </header>
 
   <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 
