--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -9,6 +9,7 @@ single: true
   <header>
     <h1>{{ page.title }}</h1>
     <p>{{ page.date }}</p>
+    <p>Episode {{ page.episode }}</p>
   </header>
 
   <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
