Adding some temporary .wrapper CSS.

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -6,5 +6,7 @@
     {{ content }}
   </div>
   <footer></footer>
+
+  <script src="http://get.gridsetapp.com/1728/overlay/"></script>
 </body>
 </html>
