--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,1 +1,9 @@
 @import "compass";
+
+body { -webkit-font-smoothing: antialiased; }
+
+.wrapper {
+    margin: 0 auto;
+    max-width: 1100px;
+    width: 90%;
+}
