--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,3 +7,18 @@ body { -webkit-font-smoothing: antialiased; }
     max-width: 1100px;
     width: 90%;
 }
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16/9 ratio */
+    padding-top: 30px; /* IE6 workaround*/
+    height: 0;
+    overflow: hidden;
+
+    iframe, object, embed {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+    }
+}
+
