--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -18,7 +18,9 @@ single: true
     <p></p>
   </header>
 
-  <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+  <div class="embed-container">
+    <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+  </div>
 
   <div class="entry-content">{{ content }}</div>
 
