--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -19,7 +19,7 @@ single: true
   </header>
 
   <div class="embed-container">
-    <iframe src="http://youtube.com/embed/{{ page.ytid }}" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+    <iframe src="http://youtube.com/embed/{{ page.ytid }}?vq=hd720" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
   </div>
 
   <div class="entry-content">{{ content }}</div>
