--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -24,6 +24,6 @@ single: true
 
   <div class="entry-content">{{ content }}</div>
 
-  {% include youtube.html %}
+  {% include custom/youtube.html %}
 </article>
 </div>
