Importing the description from YouTube.

--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -23,6 +23,7 @@ single: true
   </div>
 
   <div class="entry-content">{{ content }}</div>
+  <div class="entry-content js-yt-description"></div>
 
   {% include custom/youtube.html %}
 </article>
