--- a/source/_includes/custom/youtube.html
+++ b/source/_includes/custom/youtube.html
@@ -5,6 +5,7 @@
 
       $('.js-yt-views').text(response.data.viewCount);
       $('.js-yt-comments').text(response.data.commentCount);
+      $('.js-yt-description').text(response.data.description);
     });
   });
 </script>
