Adding a basic "juke" template for moving between posts.

--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -25,6 +25,8 @@ single: true
   <div class="entry-content js-yt-description"></div>
 
 </article>
+
+{% include juke.html %}
 </div>
 
 {% include custom/youtube.html %}
