--- a/source/_layouts/video.html
+++ b/source/_layouts/video.html
@@ -26,7 +26,9 @@ single: true
 
 </article>
 
+<div class="juke">
 {% include post/juke.html %}
+</div>
 </div>
 
 {% include custom/youtube.html %}
