--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,5 +8,6 @@
   <footer></footer>
 
   <script src="http://get.gridsetapp.com/1728/overlay/"></script>
+  <script src="/javascripts/twitch.js"></script>
 </body>
 </html>
