--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }} // {% endif %}{{ site.title }}</title>
+  <title>{% if page.title %}{{ page.title }} &middot; {% endif %}{{ site.title }}</title>
 
   <meta name="author" content="{{ site.author }}">
 
