Widont ALL THE CONTENT.

--- a/source/_layouts/prose.html
+++ b/source/_layouts/prose.html
@@ -7,6 +7,6 @@ single: true
 <article class="hentry" role="article">
   <section class=""></section>
   <header></header>
-  <div class="entry-content">{{ content }}</div>
+  <div class="entry-content">{{ content | widont }}</div>
 </article>
 </div>
