Adding a YT call that'll fetch data for my latest upload.

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,5 +9,6 @@
 
   <script src="http://get.gridsetapp.com/1728/overlay/"></script>
   <script src="/javascripts/twitch.js"></script>
+  <script src="/javascripts/youtube.js"></script>
 </body>
 </html>
