Use the new stylesheets from Gridset.

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -9,4 +9,7 @@
   {% capture canonical %}{{ site.url }}{% if site.permalink contains ".html" %}{{ page.url }}{% else %}{{ page.url | remove:"index.html" }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+  <!-- Temporary -->
+  <link href="http://get.gridsetapp.com/1728/gzip/" rel="stylesheet" />
 </head>
