--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,7 +7,7 @@ body { -webkit-font-smoothing: antialiased; }
 .wrapper {
     margin: 0 auto;
     max-width: 1100px;
-    width: 90%;
+    width: 990px;
 }
 
 .embed-container {
