--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,7 +5,13 @@
   <div id="content">
     {{ content }}
   </div>
-  <footer></footer>
+  <footer>
+    <div class="wrapper">
+      <div class="copyright">
+        <p>Copyright &copy; 2000-2012 <a href="http://bryanvelo.so">Bryan Veloso</a>. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/avalonstar/avalonstar">Get the source.</a></p>
+      </div>
+    </div>
+  </footer>
 
   <script src="http://get.gridsetapp.com/10673/overlay/"></script>
   <script src="/javascripts/twitch.js"></script>
