--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -13,4 +13,6 @@
 
   <!-- Temporary -->
   <link href="http://get.gridsetapp.com/10673/gzip/" rel="stylesheet" />
+  <script type="text/javascript" src="//use.typekit.net/faf8zln.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
