Specify some frequently used brand colors.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,6 +2,10 @@
 
 @import "base/normalize";
 
+
+$brand-twitch: #6441a5;
+$brand-youtube: #c4302b;
+
 a { text-decoration: none; }
 body {
   background-color: white;
