--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -27,9 +27,13 @@
         </div>
       </div>
     </section>
-    <section class="copyright">
+    <section class="lower-hero">
       <div class="wrapper">
         <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
+      </div>
+    </section>
+    <section class="copyright">
+      <div class="wrapper">
         <p>&copy; 2000-2012. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/avalonstar/avalonstar">Get the source.</a></p>
       </div>
     </section>
