--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -2,9 +2,13 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="content-language" content="en">
   <title>{% if page.title %}{{ page.title }} &middot; {% endif %}{{ site.title }}</title>
 
   <meta name="author" content="{{ site.author }}">
+  <meta name="copyright" content="{{ site.author }}">
+  <meta name="description" content="{{ site.description }}">
+  <meta name="ICBM" content="34.023411,-118.403607">
 
   {% capture canonical %}{{ site.url }}{% if site.permalink contains ".html" %}{{ page.url }}{% else %}{{ page.url | remove:"index.html" }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
