Change up the body ID and class bits.

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,6 +1,6 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
-<body {% if page.body_id %}id="{{ page.body_id }}"{% endif %}>
+<body id="avalonstar-tv" {% if page.body_class %}class="{{ page.body_class }}"{% endif %}>
   <header class="sv-all">
     <div class="wrapper">
       <h1 class="sv1"><a href="/"></a></h1>
