--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,4 @@
-@import "compass";
-@import "normalize";
-@import "susy";
-@import "typeplate";
-
+@import "base";
 
 $brand-twitch: #6441a5;
 $brand-youtube: #c4302b;
