Let's get Susy.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -1,32 +1,34 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
 <body id="avalonstar-tv" {% if page.body_class %}class="{{ page.body_class }}"{% endif %}>
-  {% include header.html %}
-  <div id="content">
-    {{ content }}
+  <div class="page">
+    {% include header.html %}
+    <div id="content">
+      {{ content }}
+    </div>
+    <footer>
+      <section>
+        <div class="wrapper">
+          <div class="">
+            <h1>What is Avalonstar?</h1>
+            <p>Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso.</p>
+          </div>
+          <div class="">
+          </div>
+        </div>
+      </section>
+      <section class="lower-hero">
+        <div class="wrapper">
+          <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
+        </div>
+      </section>
+      <section class="copyright">
+        <div class="wrapper">
+          <p>&copy; 2000-2013. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
+        </div>
+      </section>
+    </footer>
   </div>
-  <footer>
-    <section>
-      <div class="wrapper">
-        <div class="">
-          <h1>What is Avalonstar?</h1>
-          <p>Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso.</p>
-        </div>
-        <div class="">
-        </div>
-      </div>
-    </section>
-    <section class="lower-hero">
-      <div class="wrapper">
-        <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
-      </div>
-    </section>
-    <section class="copyright">
-      <div class="wrapper">
-        <p>&copy; 2000-2012. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
-      </div>
-    </section>
-  </footer>
 
   <script src="http://get.gridsetapp.com/10673/overlay/"></script>
   <script src="/javascripts/twitch.js"></script>
