--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="content-language" content="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <title>{% if page.title %}{{ page.title }} &middot; {% endif %}{{ site.title }}</title>
 
   <meta name="author" content="{{ site.author }}">
