--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,1 +1,12 @@
 @import "base"
+
+
+// Base placeholders.
+%full-span
+  margin: 0 0 - $grid-padding * 2
+  padding: 0 $grid-padding * 2
+
+//
+.page
+  @include container
+  @include susy-grid-background
