Move and simplify.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -6,28 +6,29 @@
     <div id="content">
       {{ content }}
     </div>
-    <footer>
-      <section>
-        <div class="wrapper">
-          <div class="">
-            <h1>What is Avalonstar?</h1>
-            <p>Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso.</p>
-          </div>
-          <div class="">
-          </div>
+    <footer class="footer">
+      <div class="lower-hero">
+        <!-- Throw a logo in here. -->
+        <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
+      </div>
+      <div class="">
+        <div class="">
+          <h1>What is Avalonstar?</h1>
+          <p>Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso. From design portfolio, to award-winning blog, to wannabe video destination, Avalonstar has strived to be true to its creator.</p>
         </div>
-      </section>
-      <section class="lower-hero">
-        <div class="wrapper">
-          <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
-        </div>
-      </section>
-      <section class="copyright">
-        <div class="wrapper">
-          <p>&copy; 2000-2013. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
-        </div>
-      </section>
+        <ul class="social">
+          <li class="facebook"><a href="https://facebook.com/bryanveloso">Facebook</a></li>
+          <li class="twitter"><a href="https://twitter.com/bryanveloso">Twitter</a></li>
+          <li class="twitch"><a href="http://twitch.tv/vlogalonstar">Twitch</a></li>
+          <li class="youtube"><a href="http://youtube.com/bryanveloso">YouTube</a></li>
+          <li class="vimeo"><a href="http://vimeo.com/bryanveloso">Vimeo</a></li>
+          <li class="github"><a href="http://github.com/bryanveloso">GitHub</a></li>
+        </ul>
+      </div>
     </footer>
+    <div class="copyright">
+        <p>&copy; 2000-2013. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
+    </div>
   </div>
 
   <script src="http://get.gridsetapp.com/10673/overlay/"></script>
