--- a/_source/_layouts/video.html
+++ b/_source/_layouts/video.html
@@ -7,8 +7,8 @@ single: true
 <article class="hentry" role="article">
   <section class=""></section>
   <header>
+    <p>{{ page.date | date: "%A, %B %d, %Y" }}</p>
     <h1>{{ page.title }}</h1>
-    <p>{{ page.date }}</p>
 
     <ul class="js-yt-metadata">
       <li class="js-yt-episode">Episode {{ page.episode }}</li>
