--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -17,6 +17,6 @@
   <link href="{{ root_url }}/stylesheets/screen.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
-  <script type="text/javascript" src="//use.typekit.net/faf8zln.js"></script>
+  <script type="text/javascript" src="//use.typekit.net/zhx6fvj.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
