--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -25,4 +25,51 @@ body
   background: #333
 
   p
-    margin-bottom: 0
+    text-align: center
+
+.entry
+  .entry-title
+    @extend %normal-wrap
+    @extend .delta
+
+  .entry-metadata
+    @include reset-table
+    margin-bottom: 1em
+    width: 100%
+    border: 1px solid #eee
+    font-size: 14px
+
+    td
+      padding: 0.5em 1em
+
+    .episode
+      width: 60%
+      border-right: 1px solid #eee
+      font-weight: bold
+
+    .views
+      border-bottom: 1px solid #eee
+    .entry-date
+      display: block
+      color: rgba(#000, 0.3)
+      font-size: 11px
+      text-transform: uppercase
+
+  .entry-content
+    font-family: $font-family
+
+.embed-container
+  background-color: #000
+
+  position: relative
+  padding-bottom: 56.25%  // 16/9 ratio
+  padding-top: 30px  // IE6 workaround
+  height: 0
+  overflow: hidden
+
+  iframe, object, embed
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
