Add a line break thing.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -27,7 +27,8 @@
       </div>
     </footer>
     <div class="copyright">
-        <p>&copy; 2000-2013. All rights reserved. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
+        <p>&copy; 2000-2013.</p>
+        <p>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source.</a></p>
     </div>
   </div>
 
