--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -19,5 +19,5 @@ $brand-youtube: #c4302b
 
 // Typeplate related variables.
 $serif-boolean: false
-// $font-family: "ff-meta-serif-web-pro-1", "ff-meta-serif-web-pro-2", serif
-// $font-family-sans: "ff-meta-web-pro-1", "ff-meta-web-pro-2", sans-serif
+$font-family: "ff-meta-serif-web-pro", serif
+$font-family-sans: "ff-meta-web-pro", sans-serif
