Meta to Freight.

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -19,5 +19,5 @@ $brand-youtube: #c4302b
 
 // Typeplate related variables.
 $serif-boolean: false
-$font-family: "ff-meta-serif-web-pro", serif
-$font-family-sans: "ff-meta-web-pro", sans-serif
+$font-family: "freight-text-pro", serif
+$font-family-sans: "freight-sans-pro", sans-serif
