Remove the "* 2" from %full-span.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -3,8 +3,8 @@
 
 // Base placeholders.
 %full-span
-  margin: 0 0 - $grid-padding * 2
-  padding: 0 $grid-padding * 2
+  margin: 0 0 - $grid-padding
+  padding: 0 $grid-padding
 
 
 //
