Querying for mobile for great justice.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -33,6 +33,7 @@
   </div>
 
   <script src="http://get.gridsetapp.com/10673/overlay/"></script>
+  <script src="/javascripts/application.js"></script>
   <script src="/javascripts/twitch.js"></script>
   <script src="/javascripts/youtube.js"></script>
 </body>
