--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -11,6 +11,10 @@
 body
   margin: 0
 
+  &:after
+    content: 'mobile'
+    display: none
+
 .page
   @include container
   // @include susy-grid-background
