Getting an off-canvas layout working.

--- a/_source/_includes/navigation.html
+++ b/_source/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav role="navigation">
-  <ul>
-    <li><a href="/journal/">Journal <span>Videos from the present. <i>Words from the past.</i></span></a></li>
-    <li><a href="/live/">Live <span>Making a fool of myself. <i>And it's all live.</i></span></a></li>
-    <li><a href="/about/">About <span>Written in the stars. <i>(It's not that interesting.)</i></span></a></li>
+  <ul class="main-navigation">
+    <li><a href="/journal/"><strong>Journal</strong> <span>Videos from the present. <i>Words from the past.</i></span></a></li>
+    <li><a href="/live/"><strong>Live</strong> <span>Making a fool of myself. <i>And it's all live.</i></span></a></li>
+    <li><a href="/about/"><strong>About</strong> <span>Written in the stars. <i>(It's not that interesting.)</i></span></a></li>
   </ul>
 </nav>
