--- a/_source/_includes/header.html
+++ b/_source/_includes/header.html
@@ -1,3 +1,4 @@
 <header class="header">
+  <a class="toggle" href="#left">Nav</a>
   <h1 class="site-logo"><a href="/">Avalonstar</a></h1>
 </header>
