Hide the YouTube controls and don't change the navigation toggle text.

--- a/_source/_layouts/video.html
+++ b/_source/_layouts/video.html
@@ -8,7 +8,7 @@ single: true
   <section class=""></section>
 
   <div class="embed-container">
-    <iframe src="http://youtube.com/embed/{{ page.ytid }}?vq=hd720&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    <iframe src="http://youtube.com/embed/{{ page.ytid }}?vq=hd720&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <header class="entry-header">
