--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -111,17 +111,15 @@ body {
   @extend %full-span;
   background-color: black;
   position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
+  // padding-bottom: 56.25%;
+  padding-top: 30px; padding-bottom: 52%;
   height: 0;
   overflow: hidden;
 
   iframe, object, embed {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
   }
 }
 
